cmake_minimum_required(VERSION 3.20)
project(Primary_Stage C)

set(CMAKE_C_STANDARD 99)

add_executable(Primary_Stage main.c)

add_executable(c06_str_functions Ch04_Array_String/c06_str_functions.c)
add_executable(01_The_nature_of_Pointers Ch05_Pointer/01_The_nature_of_Pointers.c)
add_executable(day07_01 OJ/c04_02.c)
add_executable(c04_03 OJ/c04_03_fail.c)
add_executable(c04_03_ac OJ/c04_03_ac.c)
add_executable(c05_01 OJ/c05_01.c)
add_executable(c05_02 "OJ/c05_02_String inversion.c")
add_executable(02_Pointer_passed Ch05_Pointer/02_Pointer_passed.c)
add_executable(03_pointer_offset Ch05_Pointer/03_pointer_offset.c)
add_executable(04_Pointer_auto_increment Ch05_Pointer/04_Pointer_auto_increment.c)
add_executable(05_Pointer_One_dimension-array Ch05_Pointer/05_Pointer_One-dimension-array.c)
add_executable(06_Pointer_Dynamic-memory-application Ch05_Pointer/06_Pointer_Dynamic-memory-application.c)
add_executable(07_diffence_Stack-Pile Ch05_Pointer/07_diffence_Stack-Pile.c)
add_executable(c06_02_malloc OJ/c06_02_malloc.c)
add_executable(main ch06_Function/01_multiFiles/main.c ch06_Function/01_multiFiles/func.h ch06_Function/01_multiFiles/func.c)
add_executable(02_recuisive_call ch06_Function/02_recuisive_call.c)
add_executable(c07 OJ/c07_Steps_recursion.c)
add_executable(c06_01 OJ/c06_01.c)
add_executable(01_ ch07_structure/01_.c)
add_executable(02_Structure_Pointer ch07_structure/02_Structure_Pointer.c)
add_executable(01_typedef Ch08_typedef_CPP-quote/01_typedef.c)

add_executable(a_CPP Ch08_typedef_CPP-quote/a_CPP.cpp)
add_executable(test test.cpp)
